Apply mobile design first

--- a/index.html
+++ b/index.html
@@ -3,12 +3,61 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Launch Countdown Timer</title>
+        <title>Index | Launch Countdown Timer</title>
         <link rel="shortcut icon" href="./assets/img/favicon-frontend-mentor.png" type="image/x-icon">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1>hola, soy el Launch Countdown Timer</h1>
-        
+        <main class="main-container">
+                <div class="countdown__title">
+                    <h1>We're launching soon</h1>
+                </div>
+                <div class="countdown__date">
+                    <div>
+                        <div class="countdown__date-number">
+                            <p>08</p>
+                        </div>
+                        <p class="countdown__date-text">days</p>
+                    </div>
+                    <div>
+                        <div class="countdown__date-number">
+                            <p>23</p>
+                        </div>
+                        <p class="countdown__date-text">hours</p>
+                    </div>
+                    <div>
+                        <div class="countdown__date-number">
+                            <p>55</p>
+                        </div>
+                        <p class="countdown__date-text">minutes</p>
+                    </div>
+                    <div>
+                        <div class="countdown__date-number">
+                            <p>41</p>
+                        </div>
+                        <p class="countdown__date-text">seconds</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="social-networks">
+            <ul>
+                <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-pinterest"></ion-icon></a></li>
+                <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></li>
+            </ul>
+        </footer>
+        <!-- Star ionicon link -->
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <!-- End ionicon link -->
     </body>
 </html>
+
+
+
+<!-- <li>
+    <a href="#" class="social-link">
+        
+    </a>
+</li> -->
