--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
                 <div class="countdown__date">
                     <div>
                         <div class="countdown__date-number">
-                            <p>08</p>
+                            <p id="days">--</p>
                         </div>
                         <p class="countdown__date-text">days</p>
                     </div>
                     <div>
                         <div class="countdown__date-number">
-                            <p>23</p>
+                            <p id="hours">--</p>
                         </div>
                         <p class="countdown__date-text">hours</p>
                     </div>
                     <div>
                         <div class="countdown__date-number">
-                            <p>55</p>
+                            <p id="minuts">--</p>
                         </div>
                         <p class="countdown__date-text">minutes</p>
                     </div>
                     <div>
                         <div class="countdown__date-number">
-                            <p>41</p>
+                            <p id="seconds">--</p>
                         </div>
                         <p class="countdown__date-text">seconds</p>
                     </div>
@@ -47,6 +47,7 @@
                 <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></li>
             </ul>
         </footer>
+        <script src="./js/main.js"></script>
         <!-- Star ionicon link -->
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
